交换了导航栏左端两个按钮（转转、留言）的位置。

--- a/aboly.html
+++ b/aboly.html
@@ -454,7 +454,7 @@ img.characterimg {
 <div class="navbar navbar-default navbar-fixed-top lynavbar" role="navigation">
 <div class="container">
 <div class="navbar-header pull-left">
-<a href="/ideas" class="navbar-brand" title="&#30041;&#35328;" target="_blank"><span class="glyphicon glyphicon-comment"></span></a><a id="navrandomjump" class="navbar-brand" title="&#36716;&#36716;"><span class="glyphicon glyphicon-asterisk"></span></a>
+<a id="navrandomjump" class="navbar-brand" title="&#36716;&#36716;"><span class="glyphicon glyphicon-asterisk"></span></a><a href="/ideas" class="navbar-brand" title="&#30041;&#35328;" target="_blank"><span class="glyphicon glyphicon-comment"></span></a>
 </div>
 <div class="navbar-header pull-right">
 <ul class="nav pull-left">
@@ -2778,7 +2778,7 @@ img.characterimg {
 <p>
 <span class="lyterm">知</span>（<span class="lypinyin">zh&igrave;</span>）：通&ldquo;智&rdquo;，有智慧。</p>
 <p>
-<a id="qujiu"></a><span class="lyseealso"><span>【参】</span><span>如果跳出&ldquo;里&rdquo;的环境，择友、择业等等，也都是这个道理。《大戴礼记&middot;曾子疾病》：<span class="lyq">与君子游，苾乎如入兰芷之室，久而不闻，则与之化矣；与小人游，贷乎如入鲍鱼之次，久而不闻，则与之化矣。是故君子慎其所去就。</span>（苾（<span class="lypinyin">b&igrave;</span>）：芳香。鲍鱼：腌咸鱼。贷：清代王念孙认为是&ldquo;<img alt="" src="/img/zhi.png" class="characterimg">&rdquo;（<span class="lypinyin">zh&iacute;</span>）之误，败臭。次：指肆，市中店铺。）英文<a href="http://heptagrama.com/quotes-thoughts-62.htm" class="lyurl" target="_blank">谚语</a>的建议更直白：<span class="lyqe">Surround yourself with people who make you a better person.</span>甚至<a href="http://www.jimrohn.com/" class="lyurl" target="_blank">Jim John</a>武断地说：<span class="lyqe">You are the average of the five people you spend the most time with.</span> 反过来想可能就容易认同：一直stand out是很累的；环境和时间会磨平棱角。</span></span>
+<a id="qujiu"></a><span class="lyseealso"><span>【参】</span><span>如果跳出&ldquo;里&rdquo;的环境，择友、择业等等，也都是这个道理。《大戴礼记&middot;曾子疾病》：<span class="lyq">与君子游，苾乎如入兰芷之室，久而不闻，则与之化矣；与小人游，贷乎如入鲍鱼之次，久而不闻，则与之化矣。是故君子慎其所去就。</span>（苾（<span class="lypinyin">b&igrave;</span>）：芳香。鲍鱼：腌咸鱼。贷：清代王念孙认为是&ldquo;<img alt="" src="/img/zhi.png" class="characterimg">&rdquo;（<span class="lypinyin">zh&iacute;</span>）之误，败臭。次：指肆，市中店铺。）英文<a href="http://heptagrama.com/quotes-thoughts-62.htm" class="lyurl" target="_blank">谚语</a>的建议更直白：<span class="lyqe">Surround yourself with people who make you a better person.</span>甚至<a href="http://www.jimrohn.com/" class="lyurl" target="_blank">Jim John</a>武断地说：<span class="lyqe">You are the average of the five people you spend the most time with.</span> 反过来想更容易认同：一直stand out是很累的；环境和时间会磨平棱角。</span></span>
 </p>
 </li>
 </ul>
