--- a/ly.html
+++ b/ly.html
@@ -320,7 +320,7 @@ a:link {
 <div class="navbar navbar-default navbar-fixed-top lynavbar" role="navigation">
 <div class="container">
 <div class="navbar-header pull-left">
-<a href="/ideas" class="navbar-brand" title="&#30041;&#35328;" target="_blank"><span class="glyphicon glyphicon-comment"></span></a><a id="navrandomjump" class="navbar-brand" title="&#36716;&#36716;"><span class="glyphicon glyphicon-asterisk"></span></a>
+<a id="navrandomjump" class="navbar-brand" title="&#36716;&#36716;"><span class="glyphicon glyphicon-asterisk"></span></a><a href="/ideas" class="navbar-brand" title="&#30041;&#35328;" target="_blank"><span class="glyphicon glyphicon-comment"></span></a>
 </div>
 <div class="navbar-header pull-right">
 <ul class="nav pull-left">
