--- a/aboly.html
+++ b/aboly.html
@@ -910,8 +910,8 @@ img.characterimg {
 <a id="wu2"></a>本义为没有，不存在。<span class="lyexample"><span>【例】</span><span><a href="#2.22" class="lyref">2.22</a> <span class="lyq">人而无信，不知其可也。</span></span></span> &rarr;<br>不，表示一般性的否定。<span class="lyexample"><span>【例】</span><span><a href="#1.14" class="lyref">1.14</a> <span class="lyq">君子食无求饱，居无求安。</span></span></span> &rarr;<br>不要，表示祈使，后来多用毋（<span class="lypinyin">w&uacute;</span>），勿（<span class="lypinyin">w&ugrave;</span>）。<span class="lyexample"><span>【例】</span><span>《史记&middot;儒林列传》：<span class="lyq">固曰：&ldquo;<a href="#gongsunhong">公孙子</a>，务正学以言，无曲学以阿世！&rdquo;</span>（固：西汉宿儒辕固生。阿（<span class="lypinyin">ē</span>）：迎合。）<a href="#9.25" class="lyref">9.25</a> <span class="lyq">毋友不如己者。</span></span></span> &rarr; <br>
 <a id="wu2a"></a>条件连词，无论，不管。<span class="lyexample"><span>【例】</span><span><a href="#20.2" class="lyref">20.2</a> <span class="lyq">君子无众寡，无小大，<a href="#wu2">无</a>敢慢。</span></span></span>
 <br>从本义&ldquo;没有&rdquo;又演变为哲学名词，空虚，虚无。<span class="lyexample"><span>【例】</span><span>《老子》第1章：<span class="lyq">无，名天地之始。有，名万物之母。</span>（按<a href="#laozizhuyi">高亨</a>先生的断句。）</span></span>
-<br>这种灵活性很便于一语双关。如《史记&middot;张释之冯唐列传》中，汉武帝让张释之进言时<span class="lyq"><a href="#bei1">卑</a>之，毋甚高论</span>，意思是切合实际别唱高调，<span class="lyq">令今可施行也</span>。中小学语文课本收入的华罗庚《统筹方法》用作<span class="lyq">卑之无甚高论</span>，意思是说穿了不值一文钱，<span class="lyq">这些道理谁都懂得</span>。</p>
-<p>孔子这句话不是宣扬功利比附，让人疏远贫贱之交，可以参见他对<a href="#yuanrang">原壤</a>的态度。本章主旨在于修身治学，&ldquo;友&rdquo;的关注点也是不断学习提高：<a href="#12.24" class="lyref">12.24</a> <span class="lyq">以友辅仁</span>，<a href="#9.30" class="lyref">9.30</a> <span class="lyq">共学</span><span class="lyq">、适道、与立、与权</span>。尺短寸长，<a href="#13.23" class="lyref">13.23</a> <span class="lyq">君子和而不同</span>，<a href="#7.22" class="lyref">7.22</a> <span class="lyq">三人行，必有我师焉</span>，假如真能按&ldquo;如&rdquo;和&ldquo;不如&rdquo;排序，那么谁也不会有朋友，这个道理子张在 <a href="#19.3" class="lyref">19.3</a>  说得很明白。</p>
+<br>这种灵活性很便于一语双关。如《史记&middot;张释之冯唐列传》中，汉文帝让张释之进言时<span class="lyq"><a href="#bei1">卑</a>之，毋甚高论</span>，意思是切合实际别唱高调，<span class="lyq">令今可施行也</span>。中小学语文课本收入的华罗庚《统筹方法》用作<span class="lyq">卑之无甚高论</span>，意思是说穿了不值一文钱，<span class="lyq">这些道理谁都懂得</span>。</p>
+<p>孔子这句话不是宣扬功利比附，让人疏远贫贱之交，可以参见他对<a href="#yuanrang">原壤</a>的态度。本章主旨在于修身治学，&ldquo;友&rdquo;的关注点也是不断学习提高：<a href="#12.24" class="lyref">12.24</a> <span class="lyq">以友辅仁</span>，<a href="#9.30" class="lyref">9.30</a> <span class="lyq">共学</span><span class="lyq">、适道、与立、与权</span>。尺短寸长，<a href="#13.23" class="lyref">13.23</a> <span class="lyq">君子和而不同</span>，<a href="#7.22" class="lyref">7.22</a> <span class="lyq">三人行，必有我师焉</span>，假如真能按&ldquo;如&rdquo;与&ldquo;不如&rdquo;排序，那么谁也不会有朋友，这个道理子张在 <a href="#19.3" class="lyref">19.3</a>  说得很明白。</p>
 </li>
 <li>
 <p>
@@ -1030,7 +1030,7 @@ img.characterimg {
 <p>
 <a id="li3"></a><span class="lyterm">礼</span>：礼节，礼仪，本义为敬祭神灵以求降福。<a href="#zhougong">周公</a>制礼作乐后，礼的内涵逐渐由崇拜神灵转变为尊崇道德，孔子又丰富了它的<a href="#lun2">伦理</a>因素。在<a href="#zhuxingding">成文法</a>通行以前，礼具有社会约束的效用，&ldquo;不可无礼&rdquo;也一直比法律条文更深入人心，如《诗经&middot;鄘风&middot;相鼠》：<span class="lyq">相鼠有体，人而无礼；人而无礼，胡不遄死！</span>（相：视。遄（<span class="lypinyin">chu&aacute;n</span>）：快，疾速。）仁、礼是儒家思想的核心观念。</p>
 <p>
-<span class="lyseealso"><span>【参】</span><span><a href="#6.27" class="lyref">6.27</a> <span class="lyq">约之以礼。</span>《礼记&middot;乐记》：<span class="lyq">先王之制<a href="#liyue">礼乐</a>，人为之<a href="#jie2a">节</a>&hellip;&hellip;礼节民心，乐和民声，政以行之，刑以防之。礼乐刑政，四达而不悖，则<a href="#wangdao">王道</a>备矣。</span>（礼，节而非禁。）《荀子&middot;礼论》：<span class="lyq">礼起于何也？曰：人生而有欲，欲而不得，则不能无求；求而无度量分界，则不能不争；争则乱，乱则<a href="#qiong2">穷</a>。先王恶其乱也，故制礼义以分之，以养人之欲，给人之求，使欲必不穷乎物，物必不屈于欲，两者相持而长。</span>（给（<span class="lypinyin">jǐ</span>）：供养。）《韩非子&middot;解老》：<span class="lyq">礼者，所以貌情也，群义之文章也，君臣父子之交也，贵贱贤不肖之所以别也。&hellip;&hellip;礼者，外饰之所以谕内也。</span>（礼发自人情。貌：动词，表现，表达。群：众，各种。<a href="#wen2">文</a>章：指经由礼仪的外在表现。<a id="yu4c"></a>谕：表明，显现。）《左传&middot;僖公十一年》：<span class="lyq">礼，国之干也；敬，礼之舆也。不敬则礼不行，礼不行则上下昏，何以长世？</span>（<a href="#yu2b">舆</a>：承载，基础。）亦参 <a href="#2.1" class="lyref">2.1</a> <a href="#dezhi">德治</a>与<a href="#fajia">法治</a>的比较，<a href="#6.22" class="lyref">6.22</a> <a href="#mingshenli">所引</a>《礼记&middot;表记》。</span></span>
+<span class="lyseealso"><span>【参】</span><span><a href="#6.27" class="lyref">6.27</a> <span class="lyq">约之以礼。</span>《礼记&middot;乐记》：<span class="lyq">先王之制<a href="#liyue">礼乐</a>，人为之<a href="#jie2a">节</a>&hellip;&hellip;礼节民心，乐和民声，政以行之，刑以防之。礼乐刑政，四达而不悖，则<a href="#wangdao">王道</a>备矣。</span>（礼，节而非禁。）《荀子&middot;礼论》：<span class="lyq">礼起于何也？曰：人生而有欲，欲而不得，则不能无求；求而无度量分界，则不能不争；争则乱，乱则<a href="#qiong2">穷</a>。先王恶其乱也，故制礼义以分之，以养人之欲，给人之求，使欲必不穷乎物，物必不屈于欲，两者相持而长。</span>（给（<span class="lypinyin">jǐ</span>）：供养。）《韩非子&middot;解老》：<span class="lyq">礼者，所以貌情也，群义之文章也，君臣父子之交也，贵贱贤不肖之所以别也。&hellip;&hellip;礼者，外饰之所以谕内也。</span>（礼发自人情。貌：动词，表现，表达。群：众，各种。<a href="#wen2">文</a>章：指经由礼仪的外在表现。<a id="yu4c"></a>谕：表明，显现。）《左传&middot;僖公十一年》：<span class="lyq">礼，国之干也；敬，礼之舆也。不敬则礼不行，礼不行则上下昏，何以长世？</span>（<a href="#yu2b">舆</a>：承载，基础。）亦参 <a href="#2.1" class="lyref">2.1</a> <a href="#dezhi">德治</a>与<a href="#fazhi">法治</a>的比较，<a href="#6.22" class="lyref">6.22</a> <a href="#mingshenli">所引</a>《礼记&middot;表记》。</span></span>
 </p>
 </li>
 <li>
@@ -1040,13 +1040,13 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="xianwang"></a><span class="lyterm">先王</span>：古代的圣明君王，儒家多是专指<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#yu">禹</a>、<a href="#tang">汤</a>、<a href="#wen">文</a>、<a href="#wu">武</a>，有时也包括<a href="#zhougong">周公</a>，又合称为<span class="lykeyword"><a href="#sheng4">圣</a>王</span>。另外，先王也可以指前代君王。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">昔者先王以为东蒙主。</span></span></span>
+<a id="xianwang"></a><span class="lyterm">先王</span>：古代的圣明君王，儒家多是专指<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#yu">禹</a>、<a href="#tang">汤</a>、<a href="#wen">文</a>、<a href="#wu">武</a>，有时也包括<a href="#zhougong">周公</a>，又合称为<span class="lykeyword"><a href="#sheng4">圣</a>王</span>。另外，先王还可以指前代君王。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">昔者先王以为东蒙主。</span></span></span>
 </p>
 <p>圣王以后的历代君王、当代君王，包括未来之君，都可以称为<span class="lykeyword">后王</span>。<span class="lyexample"><span>【例】</span><span>清代顾炎武《与杨雪臣》：<span class="lyq">〔《日知录》〕意在拨乱涤污，法<a href="#guzhidao">古</a>用<a href="#xiachao">夏</a>，启多闻于来学，待一治于后王。</span>（<a id="fa3"></a>法：效仿。）</span></span>
 </p>
 <p>后来，<span class="lyterm">先王之道</span>逐渐成为一个信仰式的笼统说法，泛指传统政教礼制的思想内容精华。<span class="lyexample"><span>【例】</span><span>《旧唐书&middot;贾至传》：<span class="lyq">夫先王之道消，则小人之道长；小人之道长，则乱臣贼子由是出焉。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#3.16" class="lyref">3.16</a> <span class="lyq">古之道</span>。</span></span>
 </p>
-<p>历史上，&ldquo;法先王&rdquo;与&ldquo;法后王&rdquo;的浪潮此起彼伏。前者重在继承，是对过去黄金年代的追忆重建，长于深刻严谨的反思；后者重在发展，是对未来理想世界的憧憬探求，长于勇猛无畏的行进。</p>
+<p>历史上，&ldquo;法先王&rdquo;与&ldquo;法后王&rdquo;的浪潮此起彼伏。前者重在继承，是对过去黄金年代的追忆重建，长于深刻严谨的反思；后者重在发展，是对未来理想世界的憧憬探求，长于勇猛无畏的前进。</p>
 </li>
 <li>
 <p>
@@ -1055,7 +1055,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">小大由之</span>：无论大事小事，都遵循这个原则。</p>
+<span class="lyterm">小大由之</span>：（无论）大事小事，（都）遵循这个原则。</p>
 </li>
 <li>
 <p>
@@ -1232,16 +1232,17 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="de2a"></a><span class="lyterm"><a href="#de2">德</a></span>：特指与上位者的身份地位相匹配的崇高道德品质。它的异体字是惪（<span class="lypinyin">d&eacute;</span>，也是其右半边），《说文解字》解释为：<span class="lyq">外得于人，内得于己也。从直，从心。</span>甲骨文中未发现&ldquo;德&rdquo;字而有&ldquo;徝&rdquo;（<span class="lypinyin">zh&igrave;</span>）字，表示视正行直。金文加心成&ldquo;德&rdquo;，有时还省去&ldquo;彳&rdquo;旁，突出了心地正直的含义。据此推测，道德观念兴起于<a href="#zhouchao">周朝</a>，可能是武力灭<a href="#shangchao">商</a>后，需要用<a href="#geming">天赋王权</a>之说来解释维护自身的正义，即<a href="#13.3">正名</a>。执政过程中，&ldquo;有德&rdquo;又成为无法回避的标准。</p>
+<a id="de2a"></a><span class="lyterm"><a href="#de2">德</a></span>：特指与上位者的身份地位相匹配的崇高道德品质。它的异体字是惪（<span class="lypinyin">d&eacute;</span>，也是其右半边），《说文解字》解释为：<span class="lyq">外得于人，内得于己也。从直，从心。</span>甲骨文中未发现&ldquo;德&rdquo;字而有&ldquo;徝&rdquo;（<span class="lypinyin">zh&igrave;</span>）字，表示视正行直。金文加心成&ldquo;德&rdquo;，有时还省去&ldquo;彳&rdquo;旁，突出了心地正直的含义。据此推测，道德观念兴起于<a href="#zhouchao">周朝</a>，可能是武力灭<a href="#shangchao">商</a>后，需要用<a href="#geming">天赋王权</a>之说来解释维护自身的正义，即<a href="#13.3">正名</a>。执政过程中，&ldquo;有德&rdquo;又成为无可回避的标准。</p>
 <a id="dezhi"></a>
 <div class="lyseealso">
 <p>
 <span>【参】</span><span>儒家推崇的<span class="lykeyword">德治</span>，是将家族观念推广了的人治，在上修身勤政，对下仁爱教化，很依赖上位者的道德才干，于是有了&ldquo;父母官&rdquo;、&ldquo;爱民如子&rdquo;的说法。《大学》：<span class="lyq">《诗》云：&ldquo;乐<a href="#zhi1a">只</a>君子，民之父母。&rdquo;民之所好好之，民之所恶恶之，此之谓民之父母。</span>（所引诗句出自《诗经&middot;小雅&middot;南山有台》。）《论语》中多次强调，执政者必须以身作则，如 <a href="#13.6" class="lyref">13.6</a>  等。《孝经&middot;圣治》也说，<a href="#daren">君子</a><span class="lyq">言思可道，行思可乐，德义可尊，做事可<a href="#fa3">法</a>，容止可观，进退可度，以<a href="#lin2">临</a>其民。是以其民畏而爱之，<a href="#ze2">则</a>而象之，故能成其德教，而行其政令。</span>只有施行德政，才能得到上天眷顾，具体政策则可以灵活掌握。《尚书&middot;周书&middot;蔡仲之命》（伪）：<span class="lyq"><a href="#shangdi">皇天</a>无亲，惟德<a href="#shi4">是</a>辅；民心无常，惟<a href="#hui4">惠</a>之怀。为善不同，同归于治；为恶不同，同归于乱。</span></span>
 </p>
 <p>
-<a id="fajia"></a>法家主张的<span class="lykeyword">法治</span>，以密法严刑为基础，不强求执政者德才无瑕，却足以建立坚实的底线。《管子&middot;任法》：<span class="lyq">所谓仁义<a href="#liyue">礼乐</a>者，皆出于法，此先圣之所以一民也。&hellip;&hellip;君臣上下贵贱皆发<a href="#yan1a">焉</a>，故曰&ldquo;法&rdquo;。&hellip;&hellip;君臣上下贵贱皆从法，此谓为大治。</span>（<a id="yimin"></a>一民：统治百姓。发：产生。）《商君书&middot;开塞》：<span class="lyq">古之民朴<a href="#yi3a">以</a>厚，今之民巧以伪。故效于古者，先德而治；效于今者，前刑而法。</span>《韩非子&middot;难势》：<span class="lyq">且夫<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#xiachao">桀</a>、<a href="#zhou">纣</a>，千世而一出，&hellip;&hellip;吾所以为言势者，中也。&hellip;&hellip;抱法处势则治，背法去势则乱。今废势背法而待尧舜，尧舜至乃治，是千世乱而一治也；抱法处势而待桀纣，桀纣至乃乱，是千世治而一乱也。</span>
+<a id="fazhi"></a>法家主张的<span class="lykeyword">法治</span>，以密法严刑为基础，不强求执政者德才无瑕，却足以建立坚实的底线。《管子&middot;任法》：<span class="lyq">所谓仁义<a href="#liyue">礼乐</a>者，皆出于法，此先圣之所以一民也。&hellip;&hellip;君臣上下贵贱皆发<a href="#yan1a">焉</a>，故曰&ldquo;法&rdquo;。&hellip;&hellip;君臣上下贵贱皆从法，此谓为大治。</span>（<a id="yimin"></a>一民：统治百姓。发：产生。）《商君书&middot;开塞》：<span class="lyq">古之民朴<a href="#yi3a">以</a>厚，今之民巧以伪。故效于古者，先德而治；效于今者，前刑而法。</span>《韩非子&middot;难势》：<span class="lyq">且夫<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#xiachao">桀</a>、<a href="#zhou">纣</a>，千世而一出，&hellip;&hellip;吾所以为言势者，中也。&hellip;&hellip;抱法处势则治，背法去势则乱。今废势背法而待尧舜，尧舜至乃治，是千世乱而一治也；抱法处势而待桀纣，桀纣至乃乱，是千世治而一乱也。</span>
 </p>
-<p>传统政治实践中，德治与法治相为补益，教化中则偏重德礼的修养，轻视普法。《大戴礼记&middot;礼察》：<span class="lyq">凡人之知，能见已然，不能见将然。礼者，禁于将然之前，而法者，禁于已然之后。是故法之用易见，而礼之所为生难知也。</span>（礼法之用，为事前事后。&ldquo;法禁于已然之后&rdquo;的观念，可能也造成中国百姓的法律意识淡薄，违法就自认倒霉。）《后汉书&middot;陈宠传》引陈宠上疏：<span class="lyq">礼之所去，刑之所取，失礼则入刑，相为表里者也。</span>（礼法之功效，在于自律他律。）《汉书&middot;元帝本纪》载，汉元帝为太子时，<a id="hanxuandi"></a>曾向宣帝进言：<span class="lyq">&ldquo;陛下持刑太深，宜用儒生。&rdquo;宣帝作色曰：&ldquo;汉家自有法度，本以<a href="#wangdao">霸王道</a>杂之，奈何纯任德教，用周政乎！且俗儒不达时宜，好是古非今，使人眩于<a href="#zhengming">名实</a>，不知所守，何足委任？&rdquo;</span>652年编定的《唐律疏议》首卷倡言：<span class="lyq">德礼为政教之本，刑罚为政教之用，犹昏晓阳秋，相须而成者也。</span>（阳秋：即春秋，晋朝时为避文帝皇后讳，改春字为阳。）<a href="#2.3" class="lyref">2.3</a>  对法治与德治的效果进行了比较。</p>
+<p>传统政治实践中，德治与法治相为补益。《汉书&middot;元帝本纪》载，汉元帝为太子时，<a id="hanxuandi"></a>曾向宣帝进言：<span class="lyq">&ldquo;陛下持刑太深，宜用儒生。&rdquo;宣帝作色曰：&ldquo;汉家自有法度，本以<a href="#wangdao">霸王道</a>杂之，奈何纯任德教，用周政乎！且俗儒不达时宜，好是古非今，使人眩于<a href="#zhengming">名实</a>，不知所守，何足委任？&rdquo;</span>652年编定的《唐律疏议》首卷倡言：<span class="lyq">德礼为政教之本，刑罚为政教之用，犹昏晓阳秋，相须而成者也。</span>（礼法之功效，在于自律他律。阳秋：即春秋，晋朝时为避文帝皇后讳，改春字为阳。）</p>
+<p>教化中则多偏重德礼修养，轻视普法宣传。《史记&middot;礼书》开头，<span class="lyq">太史公曰：<a href="#yangyang">洋洋</a>美德乎！宰制万物，役使群众，岂人力也哉？</span>（人力：指强力可为。）《大戴礼记&middot;礼察》：<span class="lyq">凡人之知，能见已然，不能见将然。礼者，禁于将然之前，而法者，禁于已然之后。是故法之用易见，而礼之所为生难知也。</span>（礼法之用，为事前事后。&ldquo;法禁于已然之后&rdquo;的观念，可能也造成中国百姓的法律意识淡薄，违法就自认倒霉。）<a href="#2.3" class="lyref">2.3</a>  比较了法治与德治的效果。</p>
 </div>
 </li>
 <li>
@@ -1251,7 +1252,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">众星</span>：指臣僚。<span class="lyterm">共</span>（<span class="lypinyin">gǒng</span>）：通&ldquo;拱&rdquo;，环绕，环卫。这个比喻的意思是，为政以德，人心所向，才能<a href="#15.5">无为而治</a>。</p>
+<span class="lyterm">众星</span>：喻指臣僚。<span class="lyterm">共</span>（<span class="lypinyin">gǒng</span>）：通&ldquo;拱&rdquo;，环绕，环卫。这个比喻是说，为政以德，人心所向，才能<a href="#15.5">无为而治</a>。</p>
 </li>
 </ul>
 </div>
@@ -2778,7 +2779,7 @@ img.characterimg {
 <p>
 <span class="lyterm">知</span>（<span class="lypinyin">zh&igrave;</span>）：通&ldquo;智&rdquo;，有智慧。</p>
 <p>
-<a id="qujiu"></a><span class="lyseealso"><span>【参】</span><span>如果跳出&ldquo;里&rdquo;的环境，择友、择业等等，也都是这个道理。《大戴礼记&middot;曾子疾病》：<span class="lyq">与君子游，苾乎如入兰芷之室，久而不闻，则与之化矣；与小人游，贷乎如入鲍鱼之次，久而不闻，则与之化矣。是故君子慎其所去就。</span>（苾（<span class="lypinyin">b&igrave;</span>）：芳香。鲍鱼：腌咸鱼。贷：清代王念孙认为是&ldquo;<img alt="" src="/img/zhi.png" class="characterimg">&rdquo;（<span class="lypinyin">zh&iacute;</span>）之误，败臭。次：指肆，市中店铺。）英文<a href="http://heptagrama.com/quotes-thoughts-62.htm" class="lyurl" target="_blank">谚语</a>的建议更直白：<span class="lyqe">Surround yourself with people who make you a better person.</span>甚至<a href="http://www.jimrohn.com/" class="lyurl" target="_blank">Jim John</a>武断地说：<span class="lyqe">You are the average of the five people you spend the most time with.</span> 反过来想更容易认同：一直stand out是很累的；环境和时间会磨平棱角。</span></span>
+<a id="qujiu"></a><span class="lyseealso"><span>【参】</span><span>如果跳出&ldquo;里&rdquo;的环境，择友、择业等等，也都是这个道理。《大戴礼记&middot;曾子疾病》：<span class="lyq">与君子游，苾乎如入兰芷之室，久而不闻，则与之化矣；与小人游，贷乎如入鲍鱼之次，久而不闻，则与之化矣。是故君子慎其所去就。</span>（苾（<span class="lypinyin">b&igrave;</span>）：芳香。鲍鱼：腌咸鱼。贷：清代王念孙认为是&ldquo;<img alt="" src="/img/zhi.png" class="characterimg">&rdquo;（<span class="lypinyin">zh&iacute;</span>）之误，败臭。次：指肆，市中店铺。）英文<a href="http://heptagrama.com/quotes-thoughts-62.htm" class="lyurl" target="_blank">谚语</a>的建议更直白：<span class="lyqe">Surround yourself with people who make you a better person.</span>甚至<a href="http://www.jimrohn.com/" class="lyurl" target="_blank">Jim John</a>武断地说：<span class="lyqe">You are the average of the five people you spend the most time with.</span> 反过来想更容易认同：一直stand out是很累的；环境与时间会磨平棱角。</span></span>
 </p>
 </li>
 </ul>
@@ -6295,7 +6296,8 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">洋洋</span>：盛大无边的样子。</p>
+<a id="yangyang"></a><span class="lyterm">洋洋</span>：盛大无边的样子，本义是形容水势浩荡。<span class="lyexample"><span>【例】</span><span>《诗经&middot;卫风&middot;硕人》：<span class="lyq">河水洋洋，北流活活。</span>（活活：形容水流跃动有声。）</span></span>
+</p>
 </li>
 </ul>
 </div>
@@ -7195,7 +7197,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="hezuyizang"></a><span class="lyterm">是道也，何足以臧？</span>：这么做，怎么够得上好呢？就是说不作恶并不等于善，包含着对子路更进一步的期望。<span class="lyseealso"><span>【参】</span><span><a href="#5.7" class="lyref">5.7</a> 。还可以比较<a href="#dezhi">德治</a>注重的<a href="#1.4">修己</a><a href="#6.30">立人</a>，与<a href="#fajia">法家</a>强调的守法不触碰底线的差别。</span></span>
+<a id="hezuyizang"></a><span class="lyterm">是道也，何足以臧？</span>：这么做，怎么够得上好呢？就是说不作恶并不等于善，包含着对子路更进一步的期望。<span class="lyseealso"><span>【参】</span><span><a href="#5.7" class="lyref">5.7</a> 。还可以比较<a href="#dezhi">德治</a>注重的<a href="#1.4">修己</a><a href="#6.30">立人</a>，与<a href="#fazhi">法家</a>强调的守法不触碰底线的差别。</span></span>
 </p>
 </li>
 </ul>
@@ -9467,7 +9469,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="zhengming"></a><span class="lyterm">正名</span>：端正名分，使名实相符，即<a href="#junchenfuzi">君臣父子</a>的正统关系。</p>
+<a id="zhengming"></a><span class="lyterm">正名</span>：端正名分，使名实相符，实指<a href="#junchenfuzi">君臣父子</a>的正统关系。</p>
 <p>汉代尊儒，教化中强调名分地位的意义，&ldquo;以名为教&rdquo;，<a href="#14.26">不出其位</a>，用以维护等级秩序，从魏晋起被称作<span class="lykeyword">名教</span>。超越本分之举称为<span class="lykeyword"><a href="#jian4a">僭</a></span>，<a id="cuan4"></a>臣夺君位称为<span class="lykeyword">篡</span>（<span class="lypinyin">cu&agrave;n</span>），名实不符之物称为<span class="lykeyword">伪</span>，假托上命称为<span class="lykeyword">矫</span>，都是很忌讳的。</p>
 <div class="lyseealso">
 <p>
@@ -9482,9 +9484,10 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">无所<a href="#cuo4">错</a>手足</span>：指不知怎么做才妥当。<span class="lyseealso"><span>【参】</span><span>《资治通鉴&middot;唐太宗贞观元年》（627年），县令裴仁轨调遣公家守门人办私事，太宗<span class="lyq">怒欲斩之。殿中侍御史长安李乾祐谏曰：&ldquo;法者，陛下所与天下共也，非陛下所独有也。今仁轨坐轻罪而抵极刑，臣恐人无所措手足。&rdquo;</span></span></span>
+<span class="lyterm">无所<a href="#cuo4">错</a>手足</span>：指不知要怎么做才妥当。后来有成语&ldquo;手足无措&rdquo;，形容人慌乱无定的样子，多用于心情紧张或应付不来事情的场景。</p>
+<p>
+<span class="lyseealso"><span>【参】</span><span>在位君子既然享有<a href="#dezhi">民之父母</a>的优越地位，被统治者就容易感到授人以柄，缺乏反向约束力。所以史籍上才会时常强调法之尊严，力求令行禁止。如《史记&middot;张释之冯唐列传》载，有行人误惊了汉文帝的御马，廷尉张释之依法判处罚金四两，被文帝怒责，<span class="lyq">释之曰：&ldquo;法者，<a href="#tianzi">天子</a>所与天下公共也。今法如此而更重之，是法不信于民也。且方其时，上使立诛之则已；今既下廷尉，廷尉，天下之平也，一倾而天下用法皆为轻重，民安所错手足？唯陛下察之。&rdquo;良久，上曰：&ldquo;廷尉当是也。&rdquo;</span>（廷尉：秦汉两代的最高司法官，九卿之一。&ldquo;立诛之则已&rdquo;仍是天子的特权。）</span></span>
 </p>
-<p>后来有成语&ldquo;手足无措&rdquo;，形容人慌乱无定的样子，多用于心情紧张或应付不来事情的场景。</p>
 </li>
 <li>
 <p>
@@ -11734,7 +11737,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">犹及史之<a href="#que1">阙</a>文</span>：还见过史书上存疑从缺的地方。意思是，<a href="#mianyujinzhishi">今之世</a>的史书已在任意修改了。<span class="lyseealso"><span>【参】</span><span>《汉书&middot;艺文志》颜师古注：<span class="lyq">谓文字有疑，则当阙而不说。孔子自言：我初涉学，尚见阙文，今则皆无，任意改作也。</span>思考：&ldquo;史之阙文&rdquo;与现代新闻报刊的&ldquo;开天窗&rdquo;，有什么异同？</span></span>
+<span class="lyterm">犹及史之<a href="#que1">阙</a>文</span>：还见过史书上存疑从缺的地方。意思是，<a href="#mianyujinzhishi">今之世</a>的史书已在任意修改了。<span class="lyseealso"><span>【参】</span><span>《汉书&middot;艺文志》颜师古注：<span class="lyq">谓文字有疑，则当阙而不说。孔子自言：我初涉学，尚见阙文，今则皆无，任意改作也。</span><a href="#13.3" class="lyref">13.3</a> <span class="lyq">君子于其所不知，盖阙如也。</span>思考：&ldquo;史之阙文&rdquo;与现代新闻报刊的&ldquo;开天窗&rdquo;有什么异同？</span></span>
 </p>
 <p>后面的&ldquo;借乘&rdquo;具体指什么，是不是&ldquo;吾犹及&rdquo;的对象，已难确考。</p>
 </li>
