Misc changes. (See aboly's changelog.)

--- a/aboly.html
+++ b/aboly.html
@@ -810,7 +810,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="wen2"></a><span class="lyterm">文</span>：指文章辞令，这是启蒙阶段的基本功。</p>
+<a id="wen2"></a><span class="lyterm">文</span>：指文章辞令，写作表达能力，这是启蒙阶段的基本功。</p>
 <p>
 <a href="#6.27" class="lyref">6.27</a>  的<span class="lyq">博学于文</span>，则指文化内涵更丰富的礼乐教化，相当于 <a href="#5.13" class="lyref">5.13</a>  的<span class="lyq">夫子之文章</span>，<a href="#9.5" class="lyref">9.5</a>  的<a href="#siwen">斯文</a>。这是<a href="#junzi">君子</a>有责任继承发扬的精神财富。</p>
 <p>文的本义是器具、衣物等的表面上色彩交错的花纹，所以既有华美可观的意思，也可以指外表浮华虚饰。<span class="lyexample"><span>【例】</span><span><a href="#19.8" class="lyref">19.8</a> <span class="lyq">小人之过也必文。</span></span></span>
@@ -1001,11 +1001,15 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
+<span class="lyterm">其</span>：指&ldquo;父&rdquo;的子女。<a id="zhi4g"></a><span class="lyterm">志</span>：将要有所作为的决心，志向。其甲骨文字形为心之所之。</p>
+</li>
+<li>
+<p>
 <a id="mo4a"></a><span class="lyterm">没</span>（<span class="lypinyin">m&ograve;</span>）：终，尽，引申为去世。这是从沉没、消逝的意义演变来的，后来专写为&ldquo;殁&rdquo;。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">其</span>：指&ldquo;父&rdquo;的子女。<span class="lyterm">行</span>：（能反映品质的）行为，表现。<span class="lyexample"><span>【例】</span><span><a href="#5.10" class="lyref">5.10</a> <span class="lyq">今吾于人也，听其言而观其行。</span></span></span>
+<span class="lyterm">行</span>：（能反映品质的）行为，表现。<span class="lyexample"><span>【例】</span><span><a href="#5.10" class="lyref">5.10</a> <span class="lyq">今吾于人也，听其言而观其行。</span></span></span>
 </p>
 </li>
 <li>
@@ -2208,7 +2212,7 @@ img.characterimg {
 <span class="lyterm">绘事后素</span>：先有白底子才可以作画。<span class="lyterm">绘事</span>：绘画。表示技能的动词+&ldquo;事&rdquo;，是较文雅地指称该行为或工作。<span class="lyexample"><span>【例】</span><span><a href="#9.16" class="lyref">9.16</a> <span class="lyq">丧事不敢不勉</span>，现代汉语&ldquo;钟情译事多年&rdquo;。</span></span>
 </p>
 <p>
-<span class="lyterm">后</span>：动词，A后B就是先B后A。它既可以指顺序的先后（如：先礼后兵），也能含有重要性的高低、关系的递进（如：<a href="#5.20">三思而后行</a>、<a href="#qiong2">穷</a>而后工），才引出了子夏的下一问。</p>
+<span class="lyterm">后</span>：动词，follow，A后B就是先B后A。它既可以指顺序的先后（如：先礼后兵），也能含有重要性的高低、关系的递进（如：<a href="#5.20">三思而后行</a>、<a href="#qiong2">穷</a>而后工），才引出了子夏的下一问。</p>
 </li>
 <li>
 <p>
@@ -2217,7 +2221,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">起</span>：通&ldquo;启&rdquo;，启发。<span class="lyterm">予</span>（<span class="lypinyin">y&uacute;</span>）：我。《论语》中所有的&ldquo;予&rdquo;都指我，而用&ldquo;与&rdquo;表示动词给予（<span class="lypinyin">yǔ</span>）。<span class="lyexample"><span>【例】</span><span><a href="#6.4" class="lyref">6.4</a> <span class="lyq">与之釜。</span></span></span>
+<span class="lyterm">起</span>：通&ldquo;启&rdquo;，启发。<a href="#7.8" class="lyref">7.8</a>  有<span class="lyq">不愤不启</span>。<span class="lyterm">予</span>（<span class="lypinyin">y&uacute;</span>）：我。《论语》中所有的&ldquo;予&rdquo;都指我，而用&ldquo;与&rdquo;表示动词给予（<span class="lypinyin">yǔ</span>）。<span class="lyexample"><span>【例】</span><span><a href="#6.4" class="lyref">6.4</a> <span class="lyq">与之釜。</span></span></span>
 </p>
 </li>
 </ul>
@@ -6071,7 +6075,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">夺</span>：本义为强取，引申为迫使意志、信念等产生动摇或改变。<span class="lyexample"><span>【例】</span><span><a href="#9.26" class="lyref">9.26</a> <span class="lyq">三军可夺帅也，匹夫不可夺志也。</span></span></span>
+<a id="duo2"></a><span class="lyterm">夺</span>：本义为强取，引申为迫使意志、信念等产生动摇或改变。<span class="lyexample"><span>【例】</span><span><a href="#9.26" class="lyref">9.26</a> <span class="lyq">三军可夺帅也，匹夫不可夺志也。</span></span></span>
 </p>
 </li>
 </ul>
@@ -7160,15 +7164,18 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">夺</span>：第一个指强取（其性命），第二个指迫使改变，动摇。<span class="lyexample"><span>【例】</span><span>古代官员任内如果父母去世，应当辞职回家<a href="#sannianzhisang">服丧</a>，称为<span class="lykeyword">丁忧</span>（丁：遭逢）；期间如因灾难等重大变故，朝廷需要将其立即起用，就称为<span class="lykeyword">夺情</span>。</span></span><span class="lyseealso"><span>【参】</span><span>程颐语录：<span class="lyq">信有二般：有信人者，有自信者。&hellip;&hellip;学者须要自信，既自信，怎生夺亦不得。</span></span></span>
+<span class="lyterm"><a href="#duo2">夺</a></span>：第一个指强取（其性命），第二个指迫使改变，动摇。<span class="lyexample"><span>【例】</span><span>古代官员任内如果父母去世，应当辞职回家<a href="#sannianzhisang">服丧</a>，称为<span class="lykeyword">丁忧</span>（丁：遭逢）；期间如有战争、灾难等重大变故，朝廷需要将其立即起用，就称为<span class="lykeyword">夺情</span>。</span></span><span class="lyseealso"><span>【参】</span><span>程颐语录：<span class="lyq">信有二般：有信人者，有自信者。&hellip;&hellip;学者须要自信，既自信，怎生夺亦不得。</span>南宋郑汝谐《论语意原》：<span class="lyq">可夺者所主在人，不可夺者所主在我。</span></span></span>
 </p>
 </li>
 <li>
 <p>
-<a id="pifu"></a><span class="lyterm">匹夫</span>：庶民，平民百姓，引申为普通一人，平常人。这里是极言守志的难能可贵。<span class="lyexample"><span>【例】</span><span>《韩非子&middot;有度》：<span class="lyq">刑过不避大臣，赏善不遗匹夫。</span>苏轼《潮州韩文公庙碑》：<span class="lyq">匹夫而为百世师，一言而为天下法。</span>（韩愈，谥号是文。）</span></span>
+<a id="pifu"></a><span class="lyterm">匹夫</span>：庶民，平民百姓，引申为普通一人，平常人。<span class="lyexample"><span>【例】</span><span>《韩非子&middot;有度》：<span class="lyq">刑过不避大臣，赏善不遗匹夫。</span>苏轼《潮州韩文公庙碑》：<span class="lyq">匹夫而为百世师，一言而为天下法。</span>（韩文公：韩愈，谥号是文。）</span></span>
 </p>
 </li>
 </ul>
+<p>
+<span class="lyseealso"><span>【参】</span><span>本章肯定了独立人格的可贵。即使是小人物，<span class="lyq">富贵不能淫，贫贱不能移，威武不能屈，此之谓大丈夫</span>（《孟子&middot;滕文公下》）。据汪东林《1949年后的梁漱溟》记载，1974年初兴起的&ldquo;批林批孔&rdquo;运动中，哲学家梁漱溟（1893&mdash;1988）拒绝随大流，反对全盘否定孔子，反对<span class="lyq">把学术研究和政治问题搅在一起</span>，并在学习会上发表长篇讲话，认为孔子是中国历史上影响最大的古人，引起轩然大波，遭到半年多的集中批判。被追问挨批感想时，<span class="lyq">他始而不答，最后却脱口而出：&ldquo;三军可夺帅也，匹夫不可夺<a href="#zhi4g">志</a>！&rdquo;</span>要求他解释，回答说：<span class="lyq">我认为，孔子本身<a href="#7.21">不是宗教</a>，也<a href="#6.17">不要人信仰他</a>，他只是要人<a href="#7.28">相信自己的理性</a>。我只是相信自己的理性，而不轻易去相信别的什么。别的人可能对我有启发，但也还<a href="#12.1">只是启发</a>我的理性。归根结底，我还是按我的理性而言而动。因为一定要我说话，再三问我，我才说了&ldquo;三军可夺帅也，匹夫不可夺志&rdquo;的老话。吐露出来，是受压力的人说的话，不是在得势的人说的话。&ldquo;匹夫&rdquo;就是独人一个，无权无势。他的最后一着只是坚信他自己的&ldquo;志&rdquo;，什么都可以夺掉他，但就是这个&ldquo;志&rdquo;没法夺掉，就是把他这个人消灭掉，也无法夺掉！</span></span></span>
+</p>
 </div>
 </div>
 <a id="9.27"></a>
@@ -7276,11 +7283,11 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">唐棣（<span class="lypinyin">d&igrave;</span>）之华</span>这4句诗，出处已不可考。意思是：唐棣的花朵啊，摇曳翻转，怎能不思念你呀，离家太远。</p>
+<span class="lyterm">唐棣（<span class="lypinyin">d&igrave;</span>）之华</span>这4句诗，出处已不可考。意思是：唐棣的花朵啊，摇曳翻转，怎能不思念你呀，（可惜）离家太远。</p>
 <p>
 <span class="lyterm">唐棣</span>：也写作棠棣，学名叫郁李，蔷薇科灌木，春季开桃红色花。<span class="lyterm">华</span>：通&ldquo;花&rdquo;。</p>
 <p>
-<span class="lyterm">而</span>：无意义的句末助词，也可以表示感叹。<span class="lyexample"><span>【例】</span><span><a href="#18.5" class="lyref">18.5</a> <span class="lyq">已而，已而，今之从政者殆而！</span></span></span>
+<a id="er2"></a><span class="lyterm">而</span>：无意义的句末助词，也可以表示感叹。<span class="lyexample"><span>【例】</span><span><a href="#18.5" class="lyref">18.5</a> <span class="lyq">已而，已而，今之从政者殆而！</span></span></span>
 </p>
 <p>
 <span class="lyterm">是</span>：副词，用在单音节形容词谓语之前，强化了形容的效果，相当于如此，这样，so，this。<span class="lyexample"><span>【例】</span><span><a href="#20.1" class="lyref">20.1</a> <span class="lyq">周有大赉，善人是富。</span>《诗经&middot;小雅&middot;南山有台》：<span class="lyq">乐只君子，德音是茂。</span>（<a id="zhi1a"></a>只：语气词，相当于呀，呵。德音：善言。）</span></span>
@@ -7291,7 +7298,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">何远之有</span>是说，果真思念的话，就不会觉得远了。</p>
+<span class="lyterm">何远之有</span>是说，当真思念的话，就不会觉得路途遥远了。</p>
 </li>
 </ul>
 </div>
@@ -8843,9 +8850,15 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">克己复礼</span>：约束自我，回归于礼（即依礼做事）。这和 <a href="#6.30" class="lyref">6.30</a> <span class="lyq">己欲立而立人，己欲达而达人</span>，都是仁的表现，<a href="#12.22" class="lyref">12.22</a> <span class="lyq">爱人</span>则更接近仁的内涵。<span class="lyseealso"><span>【参】</span><span><a href="#9.4" class="lyref">9.4</a> <span class="lyq">子绝四</span>，<a href="#9.11" class="lyref">9.11</a> <span class="lyq">约我以礼。</span>据《左传》昭公八年（前534年）至十三年（前529年），以狂妄奢靡著称的楚灵王连续灭掉<a href="#chenguo">陈国</a>、<a href="#zhutuo">蔡国</a>后，想一举慑服诸侯、取代周室，不料陈蔡遗臣说动他的三个弟弟，趁其出征在外起兵作乱，他两个儿子被杀，军队溃散，落得个自缢而亡的下场。《昭公十二年》末尾，孔子认为楚灵王如能克制其贪欲，也不会取辱败亡：<span class="lyq">古也有志：&ldquo;克己复礼，仁也。&rdquo;信善哉！</span>（志：记载。）</span></span>
+<span class="lyterm">克己复礼</span>：约束自我（即<a href="#xiushen">修身</a>），回归于礼（即依礼做事）。这和 <a href="#6.30" class="lyref">6.30</a> <span class="lyq">己欲立而立人，己欲达而达人</span>，都是仁的表现，<a href="#12.22" class="lyref">12.22</a> <span class="lyq">爱人</span>则更接近仁的内涵。</p>
+<p>
+<a id="ke4"></a><span class="lyterm">克</span>：抑制，约束，其本义为战胜。<span class="lyterm">克己</span>在古注中有约束自我和克制私欲两种流行解释，我认为可以视为泛指和特指，没有必要截然分开。</p>
+<div class="lyseealso">
+<p>
+<span>【参】</span><span><a href="#9.4" class="lyref">9.4</a> <span class="lyq">子绝四</span>，<a href="#9.11" class="lyref">9.11</a> <span class="lyq">约我以礼。</span>&ldquo;克己复礼为仁&rdquo;并非孔子首创。据《左传》昭公八年（前534年）至十三年（前529年），以狂妄奢靡著称的楚灵王连续灭掉<a href="#chenguo">陈国</a>、<a href="#zhutuo">蔡国</a>后，想一举慑服诸侯、取代周室，不料陈蔡遗臣说动他的三个弟弟，趁其出征在外起兵作乱，他两个儿子被杀，军队溃散，落得个自缢而亡的下场。《昭公十二年》末尾，孔子认为楚灵王如能克制其贪欲，也不会取辱败亡：<span class="lyq">古也有志：&ldquo;克己复礼，仁也。&rdquo;信善哉！</span>（志：记载。）</span>
 </p>
-<p>1993年首届国际大专辩论会决赛，复旦大学队把&ldquo;恶&rdquo;定义为<span class="lyq">本能和欲望的无节制扩张</span>，把&ldquo;善&rdquo;定义为对它们的理性节制。克己复礼的提法经过孔子倡扬，数千年来直指时弊。</p>
+<p>1993年首届国际大专辩论会决赛上，复旦大学队把&ldquo;恶&rdquo;定义为<span class="lyq">本能和欲望的无节制扩张</span>，把&ldquo;善&rdquo;定义为对它们的理性节制。克己复礼的提法经过孔子倡扬，数千年来直指时弊。</p>
+</div>
 </li>
 <li>
 <p>
@@ -8853,7 +8866,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">目</span>：条目，具体环节，item，这是由网子眼的意义引申来的。<span class="lyexample"><span>【例】</span><span>成语&ldquo;纲举目张&rdquo;（纲：网子上的总绳）。</span></span>
+<span class="lyterm">目</span>：条目，具体环节，item，这是由网子眼的含义引申来的。<span class="lyexample"><span>【例】</span><span>成语&ldquo;纲举目张&rdquo;（纲：网子上的总绳）。</span></span>
 </p>
 </li>
 </ul>
@@ -10124,7 +10137,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">克、<a href="#fa2">伐</a>、<a href="#yuan4a">怨</a>、<a href="#yu4d">欲</a></span>：好胜、自矜、多怨、贪欲。<span class="lyterm">克</span>：本义为战胜。</p>
+<span class="lyterm"><a href="#ke4">克</a>、<a href="#fa2">伐</a>、<a href="#yuan4a">怨</a>、<a href="#yu4d">欲</a></span>：好胜、自矜、多怨、贪欲。</p>
 </li>
 </ul>
 </div>
@@ -13284,7 +13297,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">已而</span>：罢了吧，算了吧。</p>
+<span class="lyterm">已<a href="#er2">而</a></span>：罢了吧，算了吧。</p>
 </li>
 </ul>
 </div>
