Minor changes. Farewell 猴年马月。

--- a/aboly.html
+++ b/aboly.html
@@ -1009,7 +1009,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">行</span>：（能反映品质的）行为，表现。<span class="lyexample"><span>【例】</span><span><a href="#5.10" class="lyref">5.10</a> <span class="lyq">今吾于人也，听其言而观其行。</span></span></span>
+<span class="lyterm">行</span>：（能反映个人品质的）行为，表现。<span class="lyexample"><span>【例】</span><span><a href="#5.10" class="lyref">5.10</a> <span class="lyq">今吾于人也，听其言而观其行。</span></span></span>
 </p>
 </li>
 <li>
@@ -2203,7 +2203,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">巧笑倩（<span class="lypinyin">qi&agrave;n</span>）兮，美目盼兮，素以为绚（<span class="lypinyin">xu&agrave;n</span>）兮</span>。<span class="lyterm">巧笑</span>：精致美好的笑容。<span class="lyterm">倩</span>：口颊俏丽的样子，近似&ldquo;笑意盈盈&rdquo;的感觉。<span class="lyterm">盼</span>：眼睛黑白分明波光流转的样子，就像沈从文小说《雪晴》里&ldquo;黑而有光的眼睛&rdquo;。<span class="lyterm">绚</span>：色彩丰富灿烂的样子。</p>
+<span class="lyterm">巧笑倩（<span class="lypinyin">qi&agrave;n</span>）兮，美目盼兮，素以为绚（<span class="lypinyin">xu&agrave;n</span>）兮</span>。<span class="lyterm">巧笑</span>：精致美好的笑容。<span class="lyterm">倩</span>：口颊俏丽的样子，近似&ldquo;笑意盈盈&rdquo;的感觉。<span class="lyterm">盼</span>：眼睛黑白分明波光流转的样子，就像沈从文小说《雪晴》里<span class="lyq">黑而有光的眼睛</span>。<span class="lyterm">绚</span>：色彩丰富灿烂的样子。</p>
 <p>
 <span class="lyterm">巧笑倩兮，美目盼兮</span>出自《诗经&middot;卫风&middot;硕人》，是连续7句形容美人（<a href="#weijun">卫庄公</a>夫人庄姜）的末两句。<span class="lyterm">素以为绚兮</span>的出处则不可考，可能是当时《诗经》里有的，后来被删掉了，也可能是孔子或别人对前两句诗的评论，子夏请孔子进一步解释。</p>
 </li>
@@ -5963,7 +5963,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">而今而后</span>：如今以后，今后。<span class="lyexample"><span>【例】</span><span>《宋史&middot;文天祥传》载，南宋宰相文天祥从容赴死后，妻子为他收尸，见<span class="lyq">其衣带中有赞曰：&ldquo;孔曰成仁，<a href="#mengzi">孟</a>曰取义；惟其义尽，所以<a href="#7.30">仁至</a>。读圣贤书，所学何事！而今而后，<a href="#shu4a">庶几</a>无愧。&rdquo;</span>（<a id="zan4"></a>赞：明，总结性的话，常为四字一句。）</span></span>
+<span class="lyterm">而今而后</span>：如今以后，今后。<span class="lyexample"><span>【例】</span><span>《宋史&middot;文天祥传》载，南宋丞相文天祥抗元被俘后宁死不降，妻子为他收尸，见<span class="lyq">其衣带中有赞曰：&ldquo;孔曰成仁，<a href="#mengzi">孟</a>曰取义；惟其义尽，所以<a href="#7.30">仁至</a>。读圣贤书，所学何事！而今而后，<a href="#shu4a">庶几</a>无愧。&rdquo;</span>（<a id="zan4"></a>赞：明，总结性的话，常为四字一句。）</span></span>
 </p>
 </li>
 <li>
@@ -6094,7 +6094,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">弘毅</span>：胸怀宽广，意志坚定。<span class="lyterm">弘</span>：广大。<span class="lyterm">毅</span>：坚强果决。</p>
+<span class="lyterm">弘毅</span>：胸怀宽广，意志坚定。<span class="lyterm">弘</span>：广大。<span class="lyterm">毅</span>：坚强果决。<a id="ren4a"></a><span class="lyterm">任</span>：责任，职责，其甲骨文字形为人负重物。</p>
 </li>
 </ul>
 <p>
@@ -6792,7 +6792,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="kui4"></a><span class="lyterm">喟</span>（<span class="lypinyin">ku&igrave;</span>）：叹气，叹息。</p>
+<a id="kui4"></a><span class="lyterm">喟</span>（<span class="lypinyin">ku&igrave;</span>）：叹气，叹息。&ldquo;喟然而叹&rdquo;在现代汉语中也很常见。</p>
 </li>
 <li>
 <p>
@@ -6809,7 +6809,7 @@ img.characterimg {
 <span class="lyterm">循循</span>：有顺序有条理的样子。<a id="xun2"></a><span class="lyterm">循</span>：沿着，顺着。<span class="lyexample"><span>【例】</span><span>成语&ldquo;循序渐进&rdquo;。</span></span>
 </p>
 <p>
-<span class="lyterm">诱</span>：诱导，以巧妙有吸引力的方式引导。成语&ldquo;循循善诱&rdquo;指老师善于引导学生学习。</p>
+<span class="lyterm">诱</span>：诱导，以巧妙有吸引力的方式引导。成语&ldquo;循循善诱&rdquo;指老师善于引导学生有效学习。</p>
 </li>
 <li>
 <p>
@@ -8286,7 +8286,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">恸</span>（<span class="lypinyin">t&ograve;ng</span>）：极度悲痛。<span class="lyexample"><span>【例】</span><span>吴伟业《圆圆曲》：<span class="lyq">恸哭<a href="#sanjun">六军</a>俱缟素。</span>（为哭国破自尽的明崇祯帝。）</span></span>
+<span class="lyterm">恸</span>（<span class="lypinyin">t&ograve;ng</span>）：极度悲痛。<span class="lyexample"><span>【例】</span><span>明末吴伟业《圆圆曲》：<span class="lyq">恸哭<a href="#sanjun">六军</a>俱缟素。</span>（为哭国破自尽的明崇祯帝。）</span></span>
 </p>
 </li>
 <li>
@@ -12581,11 +12581,11 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">莞（<span class="lypinyin">wǎn</span>）尔</span>：微笑的样子。<span class="lyterm">牛刀</span>：用来宰牛的刀。成语&ldquo;杀鸡焉用宰牛刀&rdquo;指不必小题大做或大材小用。</p>
+<span class="lyterm">莞（<span class="lypinyin">wǎn</span>）尔</span>：微笑的样子。<span class="lyterm">牛刀</span>：用来宰牛的刀。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">戏</span>：开玩笑，说着玩。因为<span class="lyterm">割鸡焉用牛刀</span>语带双关，既可指治武城不必大张礼乐，也微叹子游为武城宰是大材小用，兼有自叹之意。老师是开玩笑，做弟子的却应郑重以对。</p>
+<span class="lyterm">戏</span>：开玩笑，说着玩。因为<span class="lyterm">割鸡焉用牛刀</span>语带双关，既可指治武城不必大张礼乐，也微叹子游为武城宰是大材小用，兼有自叹之意。老师是开玩笑，做弟子的却应郑重以对。后来成语&ldquo;杀鸡焉用牛刀&rdquo;指不必小题大做或大材小用。</p>
 </li>
 </ul>
 </div>
@@ -12641,11 +12641,12 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">不<a href="#wu3">侮</a></span>：不被人轻视慢待。</p>
+<span class="lyterm">不<a href="#wu3">侮</a></span>：不被人轻视慢待。<span class="lyseealso"><span>【参】</span><span><a href="#8.4" class="lyref">8.4</a> <span class="lyq">动容貌，斯远暴慢矣。</span></span></span>
+</p>
 </li>
 <li>
 <p>
-<span class="lyterm">任</span>：信任，信赖。</p>
+<span class="lyterm"><a href="#ren4a">任</a></span>：使担当职责或职务，即信任，信赖。</p>
 </li>
 </ul>
 </div>
